<resources>
    <string name="app_name">lib_docs</string>
    <string name="breeddoc">养殖档案</string>
    <string name="farm_home">牧户档案</string>
    <string name="username">用户名</string>
    <string name="welcome">欢迎来到我家</string>
    <string name="inout">收入支出</string>
    <string name="green">经营草原面积</string>
    <string name="farm">牧户各类补贴</string>
    <string name="breed_home">养殖档案</string>
    <string name="farm_list">牧民列表</string>
    <string name="farm_msg">户主信息</string>
    <string name="user_msg">户主信息</string>
    <string name="company_support">阿启泰科技支持</string>
    <string name="save">保存</string>
    <string name="guanxi">关系</string>
    <string name="laodongli">劳动力</string>
    <string name="name">姓名(身份信息)</string>
    <string name="phone">手机号吗</string>
    <string name="idcard1">身份证正面</string>
    <string name="idcard2">身份证反面</string>
    <string name="edit">编辑</string>
    <string name="farm_doc">牧户档案</string>
    <string name="farm_base_msg">户主信息</string>
    <string name="farm_data">数据统计日期:</string>
    <string name="yuan">元</string>
    <string name="mu">亩</string>
    <string name="ge">个</string>
    <string name="new_breed_doc">新建养殖档案</string>
    <string name="doc">档案</string>
    <string name="base_msg">基础信息</string>
    <string name="chooes_ear_tag">选择耳标</string>
    <string name="add">添加</string>
    <string name="bttn_save">保存</string>
    <string name="cancel">取消</string>
    <string name="bttn_sure_add">确认添加</string>
    <string name="yangzhishujutongji">养殖数据统计</string>
    <string name="eracode">耳标：</string>
    <string name="bigpic">牲畜图片</string>
    <string name="reSerch">重选</string>
    <string name="items_name">成员信息</string>
    <string name="caoyuan">草原面积</string>
    <string name="butie">牧户补贴</string>
</resources>
