<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackblue">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_action_msg"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_msg"
            android:textColorHint="@color/afterSelector"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="*"
            android:textColor="#FC0505"
            android:textSize="26sp"
            android:textStyle="bold" />
        <TextView
            android:text="@string/name"
            android:layout_weight="0"
            android:textSize="17dp"
            android:textColor="@color/colorwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="请输入姓名"
            android:inputType="textPersonName"/>
    </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="*"
                android:textColor="#FC0505"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="0"
                android:text="@string/guanxi"
                android:textSize="17dp"
                android:textColor="@color/colorwhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/select_guanxi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="*"
            android:textColor="#FC0505"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/phone"
            android:textSize="17dp"
            android:textColor="@color/colorwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="请输入手机号码"
            android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="*"
            android:textColor="#FC0505"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/laodongli"
            android:textSize="17dp"
            android:textColor="@color/colorwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/select_laodong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottomView"
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <ImageView

            android:id="@+id/belowbackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/company_support"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorsave"
            android:hint="@string/save"
            android:textColorHint="@color/colorwhite"
            android:textSize="17dp" />


    </FrameLayout>
</LinearLayout>