<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBlackblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_header"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="0"
            android:background="@drawable/ic_action_bbtn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="23dp"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:text="@string/breeddoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:background="@color/colorBlack"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/buser_name"
                        android:textColor="@color/colorwhite"
                        android:textSize="20dp"
                        android:text="@string/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorwhite"
                        android:text="@string/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <Space
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/cio_head"
                    android:src="@drawable/cio_head"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <ImageView
                android:background="@drawable/bg03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/bg04"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg04" />

            <LinearLayout
                android:id="@+id/liner1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/bg04"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorBlack"
                android:orientation="horizontal">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/breeds_table"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/bg05"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/liner1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg05" />
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlackblue"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <Space
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:background="@drawable/ic_action_msg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:textSize="18dp"
                    android:textColor="@color/colorwhite"
                    android:text="@string/yangzhishujutongji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Space
                    android:layout_weight="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <include
                layout="@layout/incloud_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>