<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/addDrawerLayout"
    android:background="@color/colorBlackblue"
    android:layout_height="match_parent">
<LinearLayout
    android:background="@color/colorBlackblue"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_header"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ear_btn_back"
            android:layout_weight="0"
            android:background="@drawable/ic_action_bbtn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_msg"
            android:textColor="@color/colorwhite"
            android:textSize="23dp"
            android:textStyle="bold" />

        <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_action_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:hint="基础信息"
            android:textColorHint="@color/afterSelector"
            android:textSize="20dp" />
        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorBlack"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextGrey"
            android:text="@string/chooes_ear_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/add_ear_tag_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorwhite"
                android:background="@drawable/edit_bg"
                android:hint="请输入耳标"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/btn_ear_add"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/afterSelector"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/colorBlack"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="15dp"
            android:layout_height="15dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorTextGrey"
            android:text="头像"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/breed_head_icon"
            android:scaleType="fitXY"
            android:background="@drawable/head_bg"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/colorBlack"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_action_mast"
            android:layout_width="15dp"
            android:layout_height="15dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorTextGrey"
            android:text="重量"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/breed_wight"
            android:textColor="@color/colorwhite"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorTextGrey"
            android:text="kg"
            android:layout_width="20dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/colorBlack"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_action_mast"
            android:layout_width="15dp"
            android:layout_height="15dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorTextGrey"
            android:text="性别"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/breed_sex"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorTextGrey"
            android:layout_width="20dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <include
        layout="@layout/bttn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>
</LinearLayout>
    <!--侧滑布局-->
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <include
            layout="@layout/incloud_add_ear_tag_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </include>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>